force-app/main/default/objects/CFMS_Migrated_Document__c/CFMS_Migrated_Document__c.object-meta.xml
<CustomObject>
    <description>Custom object to store migrated CFMS documents, not the documents themselves but links to them in EDRM.</description>
    <label>CFMS Migrated Document</label>
    <nameField>
        <displayFormat>CFMSDoc-{00000000}</displayFormat>
        <label>CFMS Migrated Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFMS Migrated Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>