force-app/main/default/objects/CFMS_Migrated_Document__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_EDRM</complianceGroup>
    <description>Description of the document, usually who uploaded it and when.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>