force-app/main/default/objects/CFMS_Migrated_Document__c/fields/Parent_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Parent_Complaint__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <description>Complaint the document relates to.</description>
    <label>Parent Complaint</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CFMS Migrated Documents</relationshipLabel>
    <relationshipName>CFMS_Migrated_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>