force-app/main/default/objects/CFMS_Migrated_Document__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EDRM</complianceGroup>
    <description>Link to the doc in EDRM</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>