force-app/main/default/objects/CFMS_Migrated_Document__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <description>Unique external Id of the record.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>